# MCP_AutoCAD_Summary

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  autocad_service.py  claude_desktop_config.example.json  pyproject.toml  requirements.txt  server.py
tests/: test_autocad_service.py
