[project]
name = "autocad-summary-mcp"
version = "0.1.0"
description = "MCP server that summarizes the active AutoCAD drawing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27.1",
  "pyautocad>=0.2.0",
  "pywin32>=310; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
